--- a/PTUDW-20KTPM4-Nhom01-Web-main/Front_End/Home/home_logIn.html
+++ b/PTUDW-20KTPM4-Nhom01-Web-main/Front_End/Home/home_logIn.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="row btn_find_wrapper">
                     <button type="button" class="btn btn-primary btn_search col-md-2 offset-md-10">
-                        <a href="../Detail/detail.html">
+                        <a href="../detail/detail.html">
                             <ion-icon class="find_icon" name="search"></ion-icon>
                             Tìm chuyến xe
                         </a>
